alignment and color fixes

--- a/app/theme/_bootstrap-vars.scss
+++ b/app/theme/_bootstrap-vars.scss
@@ -33,6 +33,8 @@ $input-disabled-bg:         $color-input-disabled;
 $input-placeholder-color:   $color-input-placeholder;
 
 $badge-bg-level: 2;
+$badge-padding-y:                   0.5rem;
+$badge-padding-x:                   0.5rem;
 
 $dropdown-border-color:     $color-border;
 
