--- a/app/theme/_common.scss
+++ b/app/theme/_common.scss
@@ -693,6 +693,7 @@ body {
             padding-left: 0.4em;
             padding-right: 0.4em;
             text-shadow: none;
+            line-height: 12px;
 
             &:hover,
             &:focus {
