--- a/app/theme/_vars.scss
+++ b/app/theme/_vars.scss
@@ -29,7 +29,7 @@ $color-theme-blue-light:                #9ebeea;
 $color-theme-blue-lightest:             #d9e8fc;
 $color-theme-secondary:                 #ecf2f6;
 
-$color-theme-green:                     #4bb958;
+$color-theme-green:                     #3AB480;
 $color-theme-green-dark:                #47b353;
 $color-theme-orange:                    #ffb136;
 $color-theme-orange-dark:               #a65b00;
